--- a/05_spring-boot-advanced/src/main/resources/application-dev.properties
+++ b/05_spring-boot-advanced/src/main/resources/application-dev.properties
@@ -15,3 +15,4 @@ management.endpoints.enabled-by-default=true
 #server.port=8089
 management.security.enabled=false
 spring.jackson.serialization.indent-output=true
+spring.jpa.show-sql=true
