--- a/05_spring-boot-advanced/src/main/resources/application-dev.properties
+++ b/05_spring-boot-advanced/src/main/resources/application-dev.properties
@@ -16,3 +16,4 @@ management.endpoints.enabled-by-default=true
 management.security.enabled=false
 spring.jackson.serialization.indent-output=true
 spring.jpa.show-sql=true
+spring.h2.console.enabled=true
