--- a/02.Spring-Boot-Web-Application/src/main/resources/application-prod.properties
+++ b/02.Spring-Boot-Web-Application/src/main/resources/application-prod.properties
@@ -1,1 +1,5 @@
 logging.level.org.springframework: INFO
+#spring.jpa.hibernate.ddl-auto=none
+#spring.datasource.url=jdbc:mysql://localhost:3306/todo_example
+#spring.datasource.username=todouser
+#spring.datasource.password=YOUR_PASSWORD
